App works, added MXN peso and USD U.S dollar for conversion

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,9 @@
   <select name="from_currency" id="from_currency">
     <option value="EUR">Euros</option>
     <option value="JPY">Japanese Yen</option>
+	<option value="USD">U.S Dollar</option>
+  <option value="MXN">Mexican Peso</option>
+  
   </select>
   <br>
   <br>
@@ -14,6 +17,9 @@
   <select name="to_currency" id="to_currency">
     <option value="EUR">Euros</option>
     <option value="JPY">Japanese Yen</option>
+	<option value="USD">U.S Dollar</option>
+  <option value="MXN">Mexican Peso</option>
+  
   </select>
   <br>
   <button type="submit">Convert</button>
